--- a/index.css
+++ b/index.css
@@ -105,7 +105,7 @@ button:active{
 }
 .imgCont{
     width: 105%;
-    height: 40vw;
+    height: 30vw;
     max-height: 31.15vw;
     min-height: 31.15vw;
     background-color: var(--theme2);
@@ -114,9 +114,11 @@ button:active{
     align-items: center;
     border-bottom-left-radius: 0vh;
     border-top-left-radius: 50%;
+    padding-bottom: 5rem;
 
 }
 .profilePic{
+    bottom: 50;
     width: 50%;
     border-radius: 30%;
 }
@@ -445,6 +447,7 @@ hr{
 @media print {
     .imgCont{
         height: 38vw;
+        padding-bottom: 2rem;
     }
     .contactList{
         gap: 2.2vw;
@@ -457,6 +460,18 @@ hr{
     }
     .toOnline{
         visibility: visible;
+    }
+    .workCont ul{
+        font-size: 1.7vw;
+    }
+    .skills ul{
+        font-size: 2vw;
+        height: 85%;
+        display: flex;
+        flex-direction: column;
+        justify-content: flex-start;
+        align-content: stretch;
+        flex-wrap: wrap !important;
     }
     @page{
         size: A4 portrait;
