--- a/index.css
+++ b/index.css
@@ -1,481 +1,481 @@
-@import url('https://fonts.googleapis.com/css2?family=Ubuntu:ital,wght@0,300;0,400;0,500;0,700;1,400&display=swap');*{
-    box-sizing: border-box;
-    margin: 0;
-    padding: 0;
+@import url("https://fonts.googleapis.com/css2?family=Ubuntu:ital,wght@0,300;0,400;0,500;0,700;1,400&display=swap");
+* {
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
 }
-:root{
-    /* --theme1: #3a506b;
+:root {
+  /* --theme1: #3a506b;
     --theme2: #422344; */
-    --theme1: #1c2541;
-    --theme2: #5bc0be;
+  --theme1: #1c2541;
+  --theme2: #5bc0be;
 }
-::-webkit-scrollbar{
-    width: .4vw;
-  }
-::-webkit-scrollbar-track{
-    background-color: transparent;
-  }
-::-webkit-scrollbar-thumb{
-    background-color: #474543;
-    border-radius: 100vw;
-  }
-html{
-    height:141.43vw;
-    width:100vw;
-    overflow-x: hidden;
+::-webkit-scrollbar {
+  width: 0.4vw;
 }
-body{
-    width: 100%;
-    height: 100%;
-    background-color: rgb(255, 255, 255);
-    display: flex;
-    flex-direction: row;
-    font-family: 'Ubuntu', sans-serif;
+::-webkit-scrollbar-track {
+  background-color: transparent;
 }
-.langToggle{
-    position: absolute;
-    top: 1vw;
-    right: 2vw;
-    display: flex;
-    flex-direction: row;
-    justify-content: flex-start;
-    align-items: center;
-    gap: .5vw;
-    font-size: 1.8vw;
+::-webkit-scrollbar-thumb {
+  background-color: #474543;
+  border-radius: 100vw;
 }
-.langToggle button{
-    width: 2.5vw;
-    height: 2.5vw;
-    border: none;
-    background-color: transparent;
+html {
+  height: 141.43vw;
+  width: 100vw;
+  overflow-x: hidden;
 }
-.langToggle button img{
-    width: 100%;
+body {
+  width: 100%;
+  height: 100%;
+  background-color: rgb(255, 255, 255);
+  display: flex;
+  flex-direction: row;
+  font-family: "Ubuntu", sans-serif;
 }
-.downloadBtn{
-    position: absolute;
-    top: 4vw;
-    right: 1.8vw;
-    background-color: var(--theme1);
-    width: 7vw;
-    height: 2.5vw;
-    border-radius: 3vw;
-    
+.langToggle {
+  position: absolute;
+  top: 1vw;
+  right: 2vw;
+  display: flex;
+  flex-direction: row;
+  justify-content: flex-start;
+  align-items: center;
+  gap: 0.5vw;
+  font-size: 1.8vw;
 }
-.downloadBtn a{
-    text-decoration: none;
-    color: var(--theme2);
-    width: 100%;
-    display: flex;
-    justify-content: space-evenly;
-    align-items: center;
-    font-family: 'Ubuntu', sans-serif;
-    font-size: 1vw;
+.langToggle button {
+  width: 2.5vw;
+  height: 2.5vw;
+  border: none;
+  background-color: transparent;
 }
-button{
-    transition: transform .25s ease;
+.langToggle button img {
+  width: 100%;
 }
-button:hover{
-    cursor: pointer;
+.downloadBtn {
+  position: absolute;
+  top: 4vw;
+  right: 1.8vw;
+  background-color: var(--theme1);
+  width: 7vw;
+  height: 2.5vw;
+  border-radius: 3vw;
 }
-button:active{
-    transform: translateY(.5vh);
+.downloadBtn a {
+  text-decoration: none;
+  color: var(--theme2);
+  width: 100%;
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
+  font-family: "Ubuntu", sans-serif;
+  font-size: 1vw;
+}
+button {
+  transition: transform 0.25s ease;
+}
+button:hover {
+  cursor: pointer;
+}
+button:active {
+  transform: translateY(0.5vh);
 }
 /* INFO */
-.info{
-    position: relative;
-    height: 100%;
-    width: 40%;
-    background-color: var(--theme1);
-    color: var(--theme2);
-    display: flex;
-    flex-direction: column;
-    justify-content: flex-start;
-    align-items: center;
+.info {
+  position: relative;
+  height: 100%;
+  width: 40%;
+  background-color: var(--theme1);
+  color: var(--theme2);
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+  align-items: center;
 }
-.info::before{
-    content: '';
-    position: absolute;
-    left: 0%;
-    top: 0%;
-    width: 3%;
-    height: 100%;
-    background-color: var(--theme2);
-    z-index: 2;
+.info::before {
+  content: "";
+  position: absolute;
+  left: 0%;
+  top: 0%;
+  width: 3%;
+  height: 100%;
+  background-color: var(--theme2);
+  z-index: 2;
 }
-.imgCont{
-    width: 105%;
-    height: 30vw;
-    max-height: 31.15vw;
-    min-height: 31.15vw;
-    background-color: var(--theme2);
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    border-bottom-left-radius: 0vh;
-    border-top-left-radius: 50%;
-    padding-bottom: 5rem;
-
+.imgCont {
+  width: 105%;
+  height: 30vw;
+  max-height: 31.15vw;
+  min-height: 31.15vw;
+  background-color: var(--theme2);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border-bottom-left-radius: 0vh;
+  border-top-left-radius: 50%;
+  padding-bottom: 5rem;
 }
-.profilePic{
-    bottom: 50;
-    width: 50%;
-    border-radius: 30%;
+.profilePic {
+  bottom: 50;
+  width: 50%;
+  border-radius: 30%;
 }
-.infoHeader{
-    width: 100%;
-    text-align: center;
-    /* margin-top: 4vw; */
-    margin-bottom: 1vw;
-    font-size: 3vw;
+.infoHeader {
+  width: 100%;
+  text-align: center;
+  /* margin-top: 4vw; */
+  margin-bottom: 1vw;
+  font-size: 3vw;
 }
-hr{
-    width: 70%;
-    height: .1vw;
-    background-color: var(--theme2);
-    border: none;
-    margin-block: 2.5vw;
+hr {
+  width: 70%;
+  height: 0.1vw;
+  background-color: var(--theme2);
+  border: none;
+  margin-block: 2.5vw;
 }
 /* CONTACT CONT */
-.contactCont{
-    width: 100%;
-    margin-top: 5%;
-    display: flex;
-    flex-direction: column;
-    justify-content: flex-start;
-    align-items: center;
+.contactCont {
+  width: 100%;
+  margin-top: 5%;
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+  align-items: center;
 }
-.contactList{
-    width: 80%;
-    display: flex;
-    flex-direction: column;
-    justify-content: flex-start;
-    align-items: center;
-    gap: 2vw;
+.contactList {
+  width: 80%;
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+  align-items: center;
+  gap: 2vw;
 }
-.contactList li{
-    width: 100%;
-    color: var(--theme2);
-    display: flex;
-    flex-direction: row;
-    justify-content: flex-start;
-    align-items: center;
-    gap: 2vw;
-    font-size: 2vw;
+.contactList li {
+  width: 100%;
+  color: var(--theme2);
+  display: flex;
+  flex-direction: row;
+  justify-content: flex-start;
+  align-items: center;
+  gap: 2vw;
+  font-size: 2vw;
 }
-.contactList i{
-    background-color: #5bc0be;
-    color: var(--theme1);
-    font-size: 2.5vw;
-    padding: .5vw;
-    border-radius: 100%;
+.contactList i {
+  background-color: #5bc0be;
+  color: var(--theme1);
+  font-size: 2.5vw;
+  padding: 0.5vw;
+  border-radius: 100%;
 }
-.contactList a{
-    text-decoration: none;
-    color: var(--theme2);
+.contactList a {
+  text-decoration: none;
+  color: var(--theme2);
 }
 
 /* COMPETENCIES CONT */
-.competencies{
-    width: 65%;
-    font-size: 2vw;
+.competencies {
+  width: 65%;
+  font-size: 2vw;
 }
-.competencies li{
-    margin-block: 1vw;
-    list-style-type: circle;
+.competencies li {
+  margin-block: 1vw;
+  list-style-type: circle;
 }
 
 /* LANGUAGES */
-.languages{
-    width: 90%;
+.languages {
+  width: 90%;
 }
-.languages li{
-    display: flex;
-    flex-direction: row;
-    justify-content: flex-start;
-    align-items: center;
-    gap: 2.5vw;
-    font-size: 1.8vw;
-    margin-block: 1vw;
-    margin-left: 2vw;
+.languages li {
+  display: flex;
+  flex-direction: row;
+  justify-content: flex-start;
+  align-items: center;
+  gap: 2.5vw;
+  font-size: 1.8vw;
+  margin-block: 1vw;
+  margin-left: 2vw;
 }
-.languages li span{
-    font-size: 2vw;
-    font-weight: 700;
+.languages li span {
+  font-size: 2vw;
+  font-weight: 700;
 }
-.langIcon{
-    width: 8%;
+.langIcon {
+  width: 8%;
 }
 
 /* INTERESTS */
-.interests{
-    width: 100%;
-    height: 12%;
-    padding: 2vw 3vw;
+.interests {
+  width: 100%;
+  height: 12%;
+  padding: 2vw 3vw;
 }
-.interests ul{
-    display: flex;
-    flex-direction: row;
-    justify-content: space-evenly;
-    align-items: center;
-    align-content: center;
-    flex-wrap: wrap;
-    gap: .5vw;
-    font-size: 2vw;
+.interests ul {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-evenly;
+  align-items: center;
+  align-content: center;
+  flex-wrap: wrap;
+  gap: 0.5vw;
+  font-size: 2vw;
 }
-.interests li{
-    list-style-position: inside;
-    list-style-type: disc;
+.interests li {
+  list-style-position: inside;
+  list-style-type: disc;
 }
 /*///////// MAIN ///////*/
-.main{
-    position: relative;
-    max-height: 100%;
-    width: 60%;
-    display: flex;
-    flex-direction: column;
-    justify-content: flex-start;
-    align-items: center;
-    gap: 2vw;
-    color: var(--theme1);
+.main {
+  position: relative;
+  max-height: 100%;
+  width: 60%;
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+  align-items: center;
+  gap: 2vw;
+  color: var(--theme1);
 }
-.mainInfoCont{
-    width: 100%;
-    display: flex;
-    flex-direction: column;
-    justify-content: flex-start;
+.mainInfoCont {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
 }
-.mainInfoHeader{
-    position: relative;
-    font-size: 3vw;
-    margin-left: 2vw;
-    width: 60%;
-    color: var(--theme1);
-    background-color: var(--theme2);
-    text-align: center;
-    border-bottom-left-radius: 10vw;
-    border-top-right-radius: 10vw;
+.mainInfoHeader {
+  position: relative;
+  font-size: 3vw;
+  margin-left: 2vw;
+  width: 60%;
+  color: var(--theme1);
+  background-color: var(--theme2);
+  text-align: center;
+  border-bottom-left-radius: 10vw;
+  border-top-right-radius: 10vw;
 }
-.mainInfoHeader::before{
-    content: '';
-    position: absolute;
-    background-color: var(--theme2);
-    height: .3vw;
-    width: 5vw;
-    left: -5.5%;
-    top: 0;
-    z-index: 3;
+.mainInfoHeader::before {
+  content: "";
+  position: absolute;
+  background-color: var(--theme2);
+  height: 0.3vw;
+  width: 5vw;
+  left: -5.5%;
+  top: 0;
+  z-index: 3;
 }
-.mainInfoHeader::after{
-    content: '';
-    position: absolute;
-    background-color: var(--theme2);
-    height: .2vw;
-    width: 22vw;
-    left: 100%;
-    bottom: 0;
+.mainInfoHeader::after {
+  content: "";
+  position: absolute;
+  background-color: var(--theme2);
+  height: 0.2vw;
+  width: 22vw;
+  left: 100%;
+  bottom: 0;
 }
 
 /* TITLE CONT */
-.titleCont{
-    width: 100%;
-    height: 31.15vw;
-    max-height: 31.15vw;
-    background-color: var(--theme2);
-    border-bottom-right-radius: 50%;
-    border-top-right-radius: 0;
+.titleCont {
+  width: 100%;
+  height: 31.15vw;
+  max-height: 31.15vw;
+  background-color: var(--theme2);
+  border-bottom-right-radius: 50%;
+  border-top-right-radius: 0;
 }
-.titleCont h1{
-    font-size: 8vw;
-    font-weight: 300;
+.titleCont h1 {
+  font-size: 8vw;
+  font-weight: 300;
 }
-.aljn{
-    font-weight: 700;
+.aljn {
+  font-weight: 700;
 }
-.titleCont h2{
-    position: absolute;
-    right: 10%;
-    top: 9.5%;
-    font-size: 3vw;
+.titleCont h2 {
+  position: absolute;
+  right: 10%;
+  top: 9.5%;
+  font-size: 3vw;
 }
-.titleCont p{
-    width: 80%;
-    font-size: 1.75vw;
-    margin-top: 2%;
-    margin-left: 2%;
+.titleCont p {
+  width: 80%;
+  font-size: 1.75vw;
+  margin-top: 2%;
+  margin-left: 2%;
 }
-.angle1,.angle2{
-    position: absolute;
-    font-size: 2vw;
+.angle1,
+.angle2 {
+  position: absolute;
+  font-size: 2vw;
 }
-.angle1{
-    top: 10.2%;
-    right: 47%;
+.angle1 {
+  top: 10.2%;
+  right: 47%;
 }
-.angle2{
-    top: 10.2%;
-    right: 7.7%;
+.angle2 {
+  top: 10.2%;
+  right: 7.7%;
 }
 
 /* SKILLS CONT */
-.skills{
-    max-height: 18%;
+.skills {
+  max-height: 18%;
 }
 
-.skills ul{
-    margin-left: 1vw;
-    margin-top: 1vw;
+.skills ul {
+  margin-left: 1vw;
+  margin-top: 1vw;
+  font-size: 2vw;
+  max-height: 85%;
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+  align-content: stretch;
+  flex-wrap: wrap;
+}
+.skills li {
+  margin-top: 0.5vw;
+  margin-left: 2vw;
+  list-style-position: inside;
+  list-style-image: url(./resources/list4.SVG);
+}
+
+/* WORK CONT */
+.workCont {
+  padding-left: 2vw;
+}
+.workCont span {
+  margin-top: 1vw;
+  width: 60%;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
+  align-items: baseline;
+}
+.workCont span h1 {
+  font-size: 2.5vw;
+}
+.workCont span h2 {
+  font-size: 2vw;
+}
+.workCont h3 {
+  margin-left: 1.5vw;
+  font-size: 1.25vw;
+}
+.workCont ul {
+  width: 92%;
+  margin-left: 2vw;
+  margin-top: 1vw;
+  font-size: 1.2vw;
+}
+.workCont li {
+  list-style-type: circle;
+}
+
+/* PROJECTS CONT */
+.projectCont {
+  padding-left: 2vw;
+}
+.projectCont span {
+  margin-top: 1vw;
+  width: 80%;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
+  align-items: baseline;
+}
+.projectCont span h1 {
+  font-size: 2.5vw;
+}
+.projectCont span h2 {
+  font-size: 2vw;
+  font-weight: 400;
+}
+.projectCont ul {
+  width: 92%;
+  margin-left: 2vw;
+  margin-top: 1vw;
+  font-size: 1.25vw;
+}
+.projectCont li {
+  list-style-type: circle;
+}
+
+/* COURSES */
+.courses {
+  max-height: 10%;
+  max-width: 100%;
+}
+.courses ul {
+  margin-left: 3vw;
+  max-height: 100%;
+  max-width: 90%;
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+  align-content: flex-start;
+  gap: 0.2vw;
+}
+.courses li {
+  max-width: 90%;
+  margin-top: 0.85vw;
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+  align-items: flex-start;
+}
+.courses li h2 {
+  font-size: 1.5vw;
+}
+.courses a {
+  text-decoration: none;
+  color: var(--theme1);
+  font-size: 1vw;
+  padding: 0;
+}
+/* online link */
+.toOnline {
+  position: absolute;
+  bottom: 1vw;
+  right: 2vw;
+  font-size: 1vw;
+  visibility: hidden;
+}
+.toOnline a {
+  color: var(--theme1);
+}
+@media print {
+  .imgCont {
+    height: 38vw;
+    padding-bottom: 2rem;
+  }
+  .contactList {
+    gap: 2.2vw;
+  }
+  .langToggle {
+    display: none;
+  }
+  .downloadBtn {
+    display: none;
+  }
+  .toOnline {
+    visibility: visible;
+  }
+  .workCont ul {
+    font-size: 1.2vw;
+  }
+  .skills ul {
     font-size: 2vw;
-    max-height: 85%;
+    height: 85%;
     display: flex;
     flex-direction: column;
     justify-content: flex-start;
     align-content: stretch;
-    flex-wrap: wrap;
-}
-.skills li{
-    margin-top: .5vw;
-    margin-left: 2vw;
-    list-style-position: inside;
-    list-style-image: url(./resources/list4.SVG);
-}
-
-/* WORK CONT */
-.workCont{
-    padding-left: 2vw;
-}
-.workCont span{
-    margin-top: 1vw;
-    width: 60%;
-    display: flex;
-    flex-direction: row;
-    justify-content: space-around;
-    align-items: baseline;
-}
-.workCont span h1{
-    font-size: 2.5vw;
-}
-.workCont span h2{
-    font-size: 2vw;
-}
-.workCont h3{
-    margin-left: 1.5vw;
-    font-size: 1.25vw;
-}
-.workCont ul{
-    width: 92%;
-    margin-left: 2vw;
-    margin-top: 1vw;
-    font-size: 1.2vw;
-}
-.workCont li{
-    list-style-type: circle;
-}
-
-/* PROJECTS CONT */
-.projectCont{
-    padding-left: 2vw;
-}
-.projectCont span{
-    margin-top: 1vw;
-    width: 80%;
-    display: flex;
-    flex-direction: row;
-    justify-content: space-around;
-    align-items: baseline;
-}
-.projectCont span h1{
-    font-size: 2.5vw;
-}
-.projectCont span h2{
-    font-size: 2vw;
-    font-weight: 400;
-}
-.projectCont ul{
-    width: 92%;
-    margin-left: 2vw;
-    margin-top: 1vw;
-    font-size: 1.25vw;
-}
-.projectCont li{
-    list-style-type: circle;
-}
-
-/* COURSES */
-.courses{
-    max-height: 10%;
-    max-width: 100%;
-}
-.courses ul{
-    margin-left: 3vw;
-    max-height: 100%;
-    max-width: 90%;
-    display: flex;
-    flex-direction: column;
-    justify-content: flex-start;
-    align-content: flex-start;
-    gap: .2vw;
-}
-.courses li{
-    max-width: 90%;
-    margin-top: .85vw;
-    display: flex;
-    flex-direction: column;
-    justify-content: flex-start;
-    align-items: flex-start;
-}
-.courses li h2{
-    font-size: 1.5vw;
-}
-.courses a{
-    text-decoration: none;
-    color: var(--theme1);
-    font-size: 1vw;
+    flex-wrap: wrap !important;
+  }
+  @page {
+    size: A4 portrait;
+    margin: 0;
     padding: 0;
-}
-/* online link */
-.toOnline{
-    position: absolute;
-    bottom: 1vw;
-    right: 2vw;
-    font-size: 1vw;
-    visibility: hidden;
-}
-.toOnline a{
-    color: var(--theme1);
-}
-@media print {
-    .imgCont{
-        height: 38vw;
-        padding-bottom: 2rem;
-    }
-    .contactList{
-        gap: 2.2vw;
-    }
-    .langToggle{
-        display: none;
-    }
-    .downloadBtn{
-        display: none;
-    }
-    .toOnline{
-        visibility: visible;
-    }
-    .workCont ul{
-        font-size: 1.7vw;
-    }
-    .skills ul{
-        font-size: 2vw;
-        height: 85%;
-        display: flex;
-        flex-direction: column;
-        justify-content: flex-start;
-        align-content: stretch;
-        flex-wrap: wrap !important;
-    }
-    @page{
-        size: A4 portrait;
-        margin: 0;
-        padding: 0;
-    }
+  }
 }
